
6.0  2015-02-24
  - Code name "Clinking Beer Mugs", this is a major release.
  - Removed multi-name support from cookie, param and signed_cookie methods in
    Mojolicious::Controller.
  - Removed multi-name support from param method in
    Mojolicious::Validator::Validation.
  - Removed multi-name support from param method in Mojo::Parameters.
  - Removed multi-name support from cookie and upload methods in
    Mojo::Message.
  - Removed deprecated object-oriented Mojo::Loader API.
  - Removed deprecated accept_interval, lock and unlock attributes from
    Mojo::IOLoop.
  - Removed deprecated accept_interval, lock_file and lock_timeout attributes
    from Mojo::Server::Prefork.
  - Removed deprecated bridge method from Mojolicious::Routes::Route.
  - Removed deprecated is_readable method from Mojo::Reactor.
  - Removed deprecated siblings method from Mojo::DOM.
  - Removed deprecated render_exception and render_not_found methods from
    Mojolicious::Controller.
  - Removed deprecated keep_alive_requests setting from Hypnotoad.

5.82  2015-02-22
  - Deprecated Mojo::Reactor::is_readable.
  - Deprecated keep_alive_requests setting in Hypnotoad in favor of requests.
  - Improved Morbo to restart slightly faster.
  - Fixed bug in daemon and prefork commands where --inactivity-timeout option
    was called --inactivity.

5.81  2015-02-20
  - Deprecated object-oriented Mojo::Loader API.
  - Added data_section, file_is_binary, load_class and find_modules functions
    to Mojo::Loader.
  - Improved design of built-in templates.
  - Fixed test command to not let Test::Harness enable global warnings by
    default. (OlegG)

5.80  2015-02-18
  - Deprecated Mojo::IOLoop::accept_interval, Mojo::IOLoop::lock and
    Mojo::IOLoop::unlock.
  - Deprecated Mojo::Server::Prefork::accept_interval,
    Mojo::Server::Prefork::lock_file and Mojo::Server::Prefork::lock_timeout.
  - Removed -a/--accept-interval, --lock-file and -L/--lock-timeout options
    from prefork command.