@@ -45,7 +45,7 @@ sub csrf_protect {
 sub error {
   my $self = shift;
 
-  return sort keys %{$self->{error}} unless defined(my $name = shift);
+  return [sort keys %{$self->{error}}] unless defined(my $name = shift);
   return $self->{error}{$name} unless @_;
   $self->{error}{$name} = shift;
   delete $self->output->{$name};
@@ -64,6 +64,8 @@ sub has_error { $_[1] ? exists $_[0]{error}{$_[1]} : !!keys %{$_[0]{error}} }
 
 sub is_valid { exists $_[0]->output->{$_[1] // $_[0]->topic} }
 
+sub names { [sort keys %{shift->output}] }
+
 sub optional {
   my ($self, $name) = @_;
 
@@ -75,11 +77,7 @@ sub optional {
   return $self->topic($name);
 }
 
-sub param {
-  my ($self, $name) = @_;
-  return sort keys %{$self->output} unless defined $name;
-  return $self->every_param($name)->[-1];
-}
+sub param { shift->every_param(shift)->[-1] }
 
 sub required {
   my ($self, $name) = @_;
@@ -171,13 +169,17 @@ Validate C<csrf_token> and protect from cross-site request forgery.
 
 =head2 error
 
-  my @names   = $validation->error;
+  my $names   = $validation->error;
   my $err     = $validation->error('foo');
   $validation = $validation->error(foo => ['custom_check']);
 
 Get or set details for failed validation check, at any given time there can
 only be one per field.
 
+  # Names of all parameters that failed validation
+  say for @{$validation->error};
+
+  # Details about failed validation
   my ($check, $result, @args) = @{$validation->error('foo')};
 
 =head2 every_param
@@ -211,6 +213,15 @@ Check if validation resulted in errors, defaults to checking all fields.
 Check if validation was successful and field has a value, defaults to checking
 the current L</"topic">.
 
+=head2 names
+
+  my $names = $validation->names;
+
+Return a list of all validated parameter names.
+
+  # Names of all parameters that passed validation
+  say for @{$validation->names};
+
 =head2 optional
 
   $validation = $validation->optional('foo');
@@ -219,7 +230,6 @@ Change validation L</"topic">.
 
 =head2 param
 
-  my @names = $validation->param;
   my $value = $validation->param('foo');
 
 Access validated parameters. If there are multiple values sharing the same
