@@ -1,6 +1,10 @@
 
 6.0  2015-02-24
   - Code name "Clinking Beer Mugs", this is a major release.
+  - Removed name listing support from param method in Mojolicious::Controller.
+  - Removed name listing support from param method in Mojo::Parameters.
+  - Removed name listing support from param method in
+    Mojolicious::Validator::Validation.
   - Removed multi-name support from cookie, param and signed_cookie methods in
     Mojolicious::Controller.
   - Removed multi-name support from param method in
@@ -19,6 +23,8 @@
   - Removed deprecated render_exception and render_not_found methods from
     Mojolicious::Controller.
   - Removed deprecated keep_alive_requests setting from Hypnotoad.
+  - Added names method to Mojo::Parameters.
+  - Added names method to Mojolicious::Validator::Validation.
 
 5.82  2015-02-22
   - Deprecated Mojo::Reactor::is_readable.
